--- a/_includes/sidebar-desktop.html
+++ b/_includes/sidebar-desktop.html
@@ -5,20 +5,22 @@
 <aside class="sidebar">
 
   <!-- Série -->
-  <div class="sidebar-block">
-    <h5>Série {{ page.series }}</h5>
-    <ul>
-      {% assign posts_in_series = site.posts
-         | where: "series", page.series
-         | sort: "series_order" %}
+  {% if page.series != nil %}
+<div class="sidebar-block">
+  <h5>Série {{ page.series }}</h5>
+  <ul>
+    {% assign posts_in_series = site.posts
+       | where: "series", page.series
+       | sort: "series_order" %}
 
-      {% for post in posts_in_series %}
-        <li {% if post.url == page.url %}class="active"{% endif %}>
-          <a href="{{ post.url }}">{{ post.title }}</a>
-        </li>
-      {% endfor %}
-    </ul>
-  </div>
+    {% for post in posts_in_series %}
+      <li {% if post.url == page.url %}class="active"{% endif %}>
+        <a href="{{ post.url }}">{{ post.title }}</a>
+      </li>
+    {% endfor %}
+  </ul>
+</div>
+{% endif %}
 
   <!-- Métadonnées -->
   <div class="sidebar-block">
